--- a/Kantar.Randstad.GPS/Views/Home/Index.cshtml
+++ b/Kantar.Randstad.GPS/Views/Home/Index.cshtml
@@ -1,31 +1,34 @@
-﻿@{
+﻿@model Kantar.Randstad.GPS.Models.ExcelFileUploadModel
+@{
     ViewBag.Title = "Home Page";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Upload your Randstad GPS file here</h1>
+    <p class="lead">Through this website, you can upload your Great People of Randstad.</p>
+    <p>Before you start, please read the instructions.</p>
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="col-md-8 col-md-offset-2">
+        <h2>Upload your Randstad file</h2>
+        @using (Html.BeginForm("Index", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        {
+            @Html.AntiForgeryToken()
+            <p>
+                @Html.LabelFor(m => m.ExcelFile)
+                <input type="file" name="ExcelFile" id="file" />
+                @Html.ValidationMessageFor(m => m.ExcelFile)
+            </p>
+            <p>
+                @Html.LabelFor(m => m.Country)
+                @Html.DropDownListFor(m => m.Country, new SelectList(Model.Countries))
+            </p>
+            <p>
+                @Html.LabelFor(m => m.Year)
+                @Html.DropDownListFor(m => m.Year, new SelectList(Model.Years))
+            </p>
+            <input type="submit" value="Upload file" />
+        }
     </div>
 </div>
